# sandqlock

./: .gitignore  LOCAL_FIRST.md  NATIVE_FEATURES.md  README.md  package.json
migrations/: 0001_create_local_tables.sql  0002_rename_duration_to_seconds.sql  0004_add_app_tracking.sql
src/: App.css  App.tsx  ThemeSelect.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  ghost.json
src-tauri/src/: app_tracker.rs  db_commands.rs  deep_link.rs  lib.rs  main.rs  models.rs  setup.rs  sync.rs
src/components/: TimeEntryModal.tsx
src/lib/: auth-store.ts  local-api.ts  qlock-api.ts  ws-notifications.ts
src/pages/: GhostWindow.tsx  LoginPage.tsx  TimeEntriesPage.tsx  TimeEntryFormPage.tsx
